<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arducam_stereo_hat</name>
  <version>0.0.1</version>
  <description>Captures camera snapshots and publishes to the appropriate topics for images and camera info.</description>
  <maintainer email="kkunovsk@purdue.edu">Kris Kunovski</maintainer>
  <license>MIT License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
